  Available in SQL editor's right mouse menu and tools popup (ctrl+T).

#598 Mac OS: Apple's application close command "Command key"+Q now works the same way as Ctrl+Q.
  I.e. Preferences are saved on "Command key"+Q.
  Furthermore the Apple specific About-Command now displays SQuirreL's About-box.
  NOTE: As a consequence of these changes the minimum required is Java 11.


Bug fixes:

Code completion didn't work for SQLs with aliased tables when a table was (catalog and/or schema)
  qualified and the upper/lower case spelling of the qualifier didn't match the catalog's and/or schema's name in the database.
  Possibly there are connections to more recent comments to bug #1406.

Derby Plugin / Merge Request #83: Initialized shutdown handling from Merge Request #76 earlier during application start.
  Thanks to Stanimir Stamenkov for the merge request.

Merge Request #82: Schema serialization cache file handles are not released on failure
  Thanks to Stanimir Stamenkov for the merge request.

SQLParam Plugin: When installed the Plugin removed SQL comments
  even when the SQL didn't contain any parameters were replaced.

#1416 To read procedures SQuirreL now calls java.sql.DataBaseMetaData.getFunctions(), too,
   instead of java.sql.DataBaseMetaData.getProcedures() only.
   From which method a procedure/function was read is displayed at the procedure's "Info" tab.

Status bar: Memory display vanished on resizing SQuirreL's main window.

Scripts Plugin: When scripting tables for MariaDB Decimal and Numeric columns where scripted without precision and scale.

Test button in Add Alias window didn't work when a new Alias was created.
  Note: The problem didn't occur when an existing Alias was copied.

#1475 Oracle Plugin: SGA-Trace/Session Info/Invalid objects windows:
  - Column widths changed on refresh
  - Columns are now sortable
  - Windows are opened centered on SQuirreL's main window and sizes are remembered.
  Thanks to Chris B for parts of the changes.
